fix: thumbnail minimum height increased to not cut off text. Featured post now has bigger post title text size

--- a/client/src/app/shared/top-news/top-news-post-card/top-news-post-card.component.scss
+++ b/client/src/app/shared/top-news/top-news-post-card/top-news-post-card.component.scss
@@ -1,4 +1,13 @@
 @import "../../../../style/colors";
+
+.top-news-post-card.featured {
+    .post-overview {
+        .post-title {
+            font-size: 2.25rem;
+        }
+    }
+}
+
 .top-news-post-card {
 
     height: 100%;
@@ -75,7 +84,7 @@
     .thumbnail {
 
         height: 100%;
-        min-height: calc(10rem + 10vh);
+        min-height: 14rem;
         position: relative;
         z-index: 0;
 
